--- a/app/styles/th/_global.scss
+++ b/app/styles/th/_global.scss
@@ -1,3 +1,8 @@
+html,
+body{
+  overflow-x: hidden !important;
+}
+
 .th{
   &__back-button {
 	margin-top : 20px;
